# sunflowercpp

./: CMakeLists.txt  header.hpp  linkedlist.hpp  sunflower.cpp  sunflower.hpp
ip/: README.md  ip.cpp  ip.hpp  module.cpp  module.hpp  name_lookup.cpp  name_lookup.hpp
lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
parser/: ast.cpp  ast.hpp  sffunc.cpp  sffunc.hpp
tests/: 01.cpp  CMakeLists.txt  grammar.sf  if.sf  test.sf
